--- a/package.json
+++ b/package.json
@@ -1,22 +1,29 @@
 {
-	"name": "biz_rn",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"start": "node node_modules/react-native/local-cli/cli.js start",
-		"test": "jest"
-	},
-	"dependencies": {
-		"react": "15.4.2",
-		"react-native": "0.41.2"
-	},
-	"devDependencies": {
-		"babel-jest": "19.0.0",
-		"babel-preset-react-native": "1.9.1",
-		"jest": "19.0.0",
-		"react-test-renderer": "15.4.2"
-	},
-	"jest": {
-		"preset": "react-native"
-	}
+  "name": "biz_rn",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "test": "jest"
+  },
+  "dependencies": {
+    "alt": "^0.18.6",
+    "moment": "^2.17.1",
+    "react": "15.4.2",
+    "react-native": "0.41.2",
+    "react-native-navbar": "^1.6.0",
+    "react-native-router-flux": "^3.37.0",
+    "react-native-simple-store": "^1.1.0",
+    "react-native-vector-icons": "^4.0.0",
+    "rn-viewpager": "^1.1.4"
+  },
+  "devDependencies": {
+    "babel-jest": "19.0.0",
+    "babel-preset-react-native": "1.9.1",
+    "jest": "19.0.0",
+    "react-test-renderer": "15.4.2"
+  },
+  "jest": {
+    "preset": "react-native"
+  }
 }
